2010-04-29  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=38277
        MiniBrowser: -[WebCoreFlippedView currentEditor]: unrecognized selector

        * platform/mac/ThemeMac.mm:
        (-[WebCoreFlippedView currentEditor]): Added currentEditor nil implementation.

2010-04-29  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        CodeGeneratorJS.pm should be consistent about castedThis versus castedThisObj
        https://bugs.webkit.org/show_bug.cgi?id=38338

        Currently CodeGeneratorJS.pm uses castThis for methods and
        castedThisObj for attributes.  This inconsistency makes it difficult to
        factor common code genereration code into methods shared by both kinds
        of bindings.  This match aligns the names so that a future patch (e.g.,
        in https://bugs.webkit.org/show_bug.cgi?id=38313) can reduce copy/paste
        code.

        * bindings/scripts/CodeGeneratorJS.pm:
        * bindings/scripts/test/JS/JSTestObj.cpp:
        (WebCore::setJSTestObjIntAttr):
        (WebCore::setJSTestObjLongLongAttr):
        (WebCore::setJSTestObjUnsignedLongLongAttr):
        (WebCore::setJSTestObjStringAttr):
        (WebCore::setJSTestObjTestObjAttr):
        (WebCore::setJSTestObjAttrWithException):
        (WebCore::setJSTestObjAttrWithSetterException):
        (WebCore::setJSTestObjAttrWithGetterException):
        (WebCore::jsTestObjPrototypeFunctionVoidMethod):
        (WebCore::jsTestObjPrototypeFunctionVoidMethodWithArgs):
        (WebCore::jsTestObjPrototypeFunctionIntMethod):
        (WebCore::jsTestObjPrototypeFunctionIntMethodWithArgs):
        (WebCore::jsTestObjPrototypeFunctionObjMethod):
        (WebCore::jsTestObjPrototypeFunctionObjMethodWithArgs):
        (WebCore::jsTestObjPrototypeFunctionMethodWithException):
        (WebCore::jsTestObjPrototypeFunctionCustomMethod):