@@ -543,10 +543,9 @@ static void webkit_dom_test_obj_finalize(GObject* object)
 
 static void webkit_dom_test_obj_set_property(GObject* object, guint prop_id, const GValue* value, GParamSpec* pspec)
 {
-    WebKitDOMTestObj *self = WEBKIT_DOM_TEST_OBJ(object);
+     WebKitDOMTestObj *self = WEBKIT_DOM_TEST_OBJ(object);
     WebCore::TestObj* coreSelf = WebKit::core(self);
-
-    switch (prop_id) {
+     switch (prop_id) {
     case PROP_INT_ATTR:
     {
          coreSelf->setIntAttr((g_value_get_long(value)) );
@@ -591,10 +590,9 @@ static void webkit_dom_test_obj_set_property(GObject* object, guint prop_id, con
 
 static void webkit_dom_test_obj_get_property(GObject* object, guint prop_id, GValue* value, GParamSpec* pspec)
 {
-    WebKitDOMTestObj* self = WEBKIT_DOM_TEST_OBJ(object);
+     WebKitDOMTestObj* self = WEBKIT_DOM_TEST_OBJ(object);
     WebCore::TestObj* coreSelf = WebKit::core(self);
-
-    switch (prop_id) {
+     switch (prop_id) {
     case PROP_READ_ONLY_INT_ATTR:
     {
          g_value_set_long(value, coreSelf->readOnlyIntAttr());
